# agent-sdd-creator

./: .env.example  .gitignore  CURL_EXAMPLES.md  Makefile  README.md  example_chat.txt  pyproject.toml  scaffolding.md  spec.md  tasks.md
app/: auth.py  chat.py  diagram.py  docx_filler.py  extraction.py  gap_analysis.py  llm.py  main.py  models.py  prompts.py  sdd_generator.py  session.py  technology_fit.py
evals/: test_extraction.py
evals/fixtures/: expense_approval_email_thread.md
examples/sample_output/: README.md
examples/sample_output/sdd_invoice_processing/: applications_diagram.mmd  gaps.md  input.md  sdd.docx
examples/sample_output/technology_fit_vague_request/: input.md  report.md
prompts/: already_answered.md  clarification_step.md  clarifier_question.md  consolidate_gaps.md  diagram.md  extract.md  gap_analysis.md  has_new_detail.md  is_user_done.md  rubric.md  sdd_narrative.md  system_chat.md  technology_fit.md  template_tokens.md
scripts/: check_env.py  prepare_template.py  smoke_llm.py  test_chat.py  test_diagram.py  test_docx_filler.py
static/: app.js  styles.css
templates/: Automation_SDD_template.docx  index.html
