[project]
name = "automation-sdd-builder"
version = "0.1.0"
description = "Turn fuzzy business descriptions into developer-ready Software Design Documents for automation projects."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "litellm",
    "pydantic>=2",
    "python-docx",
    "jinja2",
    "python-dotenv",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "sessions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # let the formatter handle long lines
    "B008",  # FastAPI's Depends() / Form() default-arg pattern
]

[tool.ruff.format]
quote-style = "double"
